# inrof2025_ros_type

./: CMakeLists.txt  README.md  package.xml
action/: Follow.action  Rotate.action
srv/: BallColor.srv  BallPath.srv  BallPose.srv  Pose.srv
